Propagate the --disable-background-timer-throttling flag to the renderer

This flag needs to be passed to the renderer to actually disable
background throttling.

BUG=678745

Review-Url: https://codereview.chromium.org/2624153002
Cr-Commit-Position: refs/heads/master@{#442964}